cluster/apps/media/qbittorrent/backend-traffic-policy.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: qbittorrent
  namespace: media
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: qbittorrent
  httpUpgrade:
    - type: websocket
  timeout:
    http:
      requestTimeout: 120s
  tcpKeepalive:
    idleTime: 60s
    interval: 30s
    probes: 5
